Simplify aliases to one system-owned matcher